k8s/05-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: ${K8S_NAMESPACE}
spec:
  selector:
    app: assessmentos-api
  ports:
    - port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: ${K8S_NAMESPACE}
spec:
  selector:
    app: assessmentos-web
  ports:
    - port: 8080
      targetPort: 8080
